# Research-Pilot

./: .env.example  .gitignore  README.md  config.py  literature_review.md  main.py  pyproject.toml  requirements.txt
.agent/skills/frontend_design/: SKILL.md
.agent/skills/frontend_design/references/: design-1-saas-dashboard.html
.agent/skills/git-allrounder/: SKILL.md
.agent/skills/git-allrounder/references/: commit-standards.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml
backend/: .env.example  Dockerfile  cli.py  config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: critic.py  decomposer.py  retriever.py  supervisor.py  supervisor_cli.py  synthesiser.py  vector_store.py  writer.py
backend/models/: schemas.py
backend/prompts/: critic.txt  decomposer.txt  synthesiser.txt  writer.txt
backend/utils/: academic_search.py  llm.py  observability.py
context/: README.md
context/agent/: INSTRUCTIONS.md  STANDARDS.md  WORKFLOW.md
context/project/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  FRONTEND_BACKEND_SPEC.md  MISSION.md  PLAN.md
context/reference/: GLOSSARY.md  STACK_VERSIONS.md
context/session/: CONTEXT.md
docs/: notebook_demo.md
frontend/: app.js  config.js  index.html  style.css  vercel.json
prompts/: writer.txt
src/services/: critic.py  decomposer.py  retriever.py  supervisor.py  synthesiser.py  vector_store.py  writer.py
src/utils/: academic_search.py
