[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "arxiv==2.1.0",
    "chromadb>=0.5.3",
    "fastapi>=0.138.1",
    "google-generativeai==0.5.4",
    "legacy-cgi>=2.6.4 ; python_full_version >= '3.13'",
    "openai>=2.43.0",
    "pydantic>=2.9.0",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "uvicorn[standard]>=0.49.0",
]
